--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,1 @@
-html {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+@import 'bootstrap/dist/css/bootstrap.css';
